--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^16.6.0",
     "randomstring": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
